--- a/src/pages/Register/styles.scss
+++ b/src/pages/Register/styles.scss
@@ -42,6 +42,8 @@
     }
 
     @media screen and (max-width: 450px) {
+        margin-top: 5%;
+
         input {
             width: 339px;
             height: 50px;
@@ -50,8 +52,10 @@
 }
 
 .input-label {
-    width: 481px;
+    width: 489px;
     height: 75px;
+    display: flex;
+    flex-direction: column;
 
     label {
         margin-left: 10px;
@@ -79,38 +83,43 @@
         font-style: normal;
         font-weight: 400;
         line-height: 18px;
+
+        @media screen and (max-width: 450px) {
+            display: none;
+        }
     }
 }
 
-.button-login {
+.back-login {
     display: flex;
-    width: 328px;
-    padding: 17px 140px;
-    border-radius: 30.5px;
-    background: #FFF;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-
-    @media screen and (max-width: 450px) {
-        width: 339px;
-    }
-}
-
-.button-forget {
-    display: flex;
-    width: 328px;
+    width: 339px;
     padding: 17px;
     border-radius: 30.5px;
     background: rgba(255, 255, 255, 0.10);
     justify-content: center;
     align-items: center;
     gap: 10px;
-    color: var(--grey-scale-white, #FFF);
+    color: white;
+
+    @media screen and (min-width: 450px) {
+        display: none;
+    }
+}
+
+.new-account {
+    display: flex;
+    width: 328px;
+    padding: 17px;
+    border-radius: 30.5px;
+    background: #FFF;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    color: black;
     font-family: Raleway;
     font-size: 16px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 600;
     line-height: 150%;
     margin-top: 2%;
 
@@ -134,17 +143,55 @@
     z-index: 99;
 
     p {
-        width: 203px;
-        height: 76.833px;
-        flex-shrink: 0;
         color: #FFF;
         font-family: Raleway;
         font-size: 50px;
+        width: 100%;
         font-style: normal;
         font-weight: 600;
         line-height: 75px;
         text-align: center;
         text-transform: uppercase;
-        z-index: 99;
+    }
+
+    @media screen and (max-width: 450px) {
+        p {
+            width: 250px;
+            height: 36px;
+            flex-shrink: 0;
+            font-size: 32px;
+            font-weight: 700;
+            line-height: normal;
+        }
+    }
+}
+
+.container-name {
+    @media screen and (max-width: 450px) {
+        #last-name {
+            margin-top: 35px;
+        }
+    }
+
+    @media screen and (min-width: 450px) {
+        width: 489px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        div {
+            width: 232.5px;
+            height: 75px;
+        }
+
+        input {
+            width: 214.668px;
+        }
+
+        #last-name {
+            input {
+                margin-left: 10px;
+            }
+        }
     }
 }
