--- a/src/components/BackgroundLogin/styles.scss
+++ b/src/components/BackgroundLogin/styles.scss
@@ -1,16 +1,16 @@
 .background {
     width: 100vw;
-    height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     overflow: hidden;
     background: var(--backgrounds-universe-background-background-blue, #030446);
     position: absolute;
-    z-index: 1;
+    z-index: 9;
 
     @media screen and (max-width: 450px) {
-        height: 110vh;
+        height: 100vh;
         width: 100vw;
     }
 }
