--- a/src/pages/ConfirmEmail/styles.scss
+++ b/src/pages/ConfirmEmail/styles.scss
@@ -42,6 +42,7 @@
     }
 
     @media screen and (max-width: 450px) {
+        margin-top: 5%;
 
         input {
             width: 339px;
@@ -128,8 +129,51 @@
     }
 }
 
-.view-login {
+.view-register {
+    @media screen and (max-width: 450px) {
+        height: 115vh;
+    }
     position: absolute;
+}
+
+.title {
+    width: 391px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    z-index: 9999999;
+
+    p {
+        color: #FFF;
+        font-family: Raleway;
+        font-size: 50px;
+        height: 1%;
+        width: 100%;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 75px;
+        text-align: center;
+        text-transform: uppercase;
+        margin-bottom: 20px;
+    }
+
+    @media screen and (max-width: 450px) {
+        width: 100%;
+        height: 100px;
+        margin-top: 10%;
+
+        p {
+            width: 250px;
+            height: 36px;
+            flex-shrink: 0;
+            font-size: 32px;
+            font-weight: 700;
+            line-height: normal;
+            margin: 5px;
+        }
+    }
 }
 
 .content-login {
@@ -140,29 +184,6 @@
     height: 100vh;
     width: 100vw;
     z-index: 99;
-
-    p {
-        color: #FFF;
-        font-family: Raleway;
-        font-size: 50px;
-        width: 100%;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 75px;
-        text-align: center;
-        text-transform: uppercase;
-    }
-
-    @media screen and (max-width: 450px) {
-        p {
-            width: 250px;
-            height: 36px;
-            flex-shrink: 0;
-            font-size: 32px;
-            font-weight: 700;
-            line-height: normal;
-        }
-    }
 }
 
 .container-name {
