--- a/src/components/BackgroundLogin/styles.scss
+++ b/src/components/BackgroundLogin/styles.scss
@@ -1,6 +1,6 @@
 .background {
     width: 100vw;
-    height: auto;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,6 +11,23 @@
 
     @media screen and (max-width: 450px) {
         height: 100vh;
+        width: 100vw;
+    }
+}
+
+.background-register {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+    background: var(--backgrounds-universe-background-background-blue, #030446);
+    position: absolute;
+    z-index: 9;
+
+    @media screen and (max-width: 450px) {
+        height: 115vh;
         width: 100vw;
     }
 }
