--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -31,7 +31,7 @@
         }
     }
 
-    label {
+    .label {
         height: 18.506px;
         color: var(--grey-scale-white, #FFF);
         font-family: Raleway;
@@ -53,7 +53,7 @@
     width: 481px;
     height: 75px;
 
-    label {
+    .label {
         margin-left: 10px;
     }
 
@@ -71,7 +71,7 @@
     align-items: center;
     gap: 8px;
 
-    label {
+    .label-button {
         height: 18.506px;
         color: var(--grey-scale-white, #FFF);
         font-family: Raleway;
