--- a/src/pages/Register/styles.scss
+++ b/src/pages/Register/styles.scss
@@ -31,7 +31,11 @@
         }
     }
 
-    label {
+    .input-error {
+        border: 1px solid red;
+    }
+
+    .label-text {
         height: 18.506px;
         color: var(--grey-scale-white, #FFF);
         font-family: Raleway;
@@ -42,6 +46,8 @@
     }
 
     @media screen and (max-width: 450px) {
+
+        width: 80vw;
 
         input {
             width: 339px;
@@ -56,7 +62,7 @@
     display: flex;
     flex-direction: column;
 
-    label {
+    .label-text {
         margin-left: 10px;
     }
 
@@ -74,7 +80,7 @@
     align-items: center;
     gap: 8px;
 
-    label {
+    .label-button {
         height: 18.506px;
         color: var(--grey-scale-white, #FFF);
         font-family: Raleway;
